--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
     <title>Spotify</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utility.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="container flex">
-        <div class="left">a</div>
+        <div class="left">
+            <div class="home">
+                <div class="logo">
+                    <img src="image/1024px-Spotify.png" alt="image/1024px-Spotify.png" width="20">
+                </div>
+            <ul>
+                <li><i class="fa-solid fa-house"></i>Home</li>
+                <li><i class="fa-solid fa-magnifying-glass"></i>Search</li>
+            </ul>
+            </div>
+            <div class="library"></div>
+        </div>
         <div class="right">b</div>
     </div>
 
