--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div class="container flex">
-        <div class="left">
+    <div class="container flex bg-black">
+        <div class="left bg-gray">
             <div class="home">
                 <div class="logo">
                     <img src="image/1024px-Spotify.png" alt="image/1024px-Spotify.png" width="20">
