--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div class="container flex bg-black">
-        <div class="left bg-gray">
-            <div class="home">
+    <div class="container flex bg-black ">
+        <div class="left bg-black">
+            <div class="home rounded bg-gray m-1 p-1">
                 <div class="logo">
                     <img src="image/1024px-Spotify.png" alt="image/1024px-Spotify.png" width="20">
                 </div>
@@ -20,7 +20,7 @@
                 <li><i class="fa-solid fa-magnifying-glass"></i>Search</li>
             </ul>
             </div>
-            <div class="library"></div>
+            <div class="library bg-gray rounded p-1"></div>
         </div>
         <div class="right">b</div>
     </div>
